# shartvk

./: .gitignore  CMakeLists.txt  justfile  meson.build  packages-fedora
shaders/: shader.vert  vert.spv
src/: glfw-window-example.c  main.c
src/include/: tinyobj_loader_c.h  vkapp.h  vkapp_debug.h  vkapp_types.h  vkapp_vulkan.h
subprojects/: cglm.wrap
